# Astraapi

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  CONTRIBUTING.md  Dockerfile  LICENSE  MASTER_PERF_PLAN.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_PLAN.md  PERF_ANALYSIS.md  PERF_PLAN_300K.md  README.md  REVIEW_REPORT.md  TEST_FAILURES_ANALYSIS.md  all-in-one.lua  astraas  astraas12  ben  bench_tier.py  complete_backend.py  docker-compose.yml  example_server.py  fast.py  fastast.txt  fastast_2t.txt  full.txt  hi.json  index.html  ji.json  jiji.json  jji.json  lasss.json  last.json  log.md  logs.txt  nested.lua  ns.py  ns_ws.py  ok.json  (+20 more)
.github/workflows/: docs.yml  publish.yml  tests.yml
astraapi/: __init__.py  __init__.pyi  _app_base.py  _background.py  _concurrency.py  _core_bridge.py  _cpp_server.py  _datastructures_impl.py  _exception_handler.py  _json_utils.py  _middleware_impl.py  _multiworker.py  _reloader.py  _request.py  _response.py  _routing_base.py  _staticfiles.py  _status.py  _templating.py  _testclient.py  _websocket.py  _ws_groups.py  applications.py  background.py  concurrency.py  datastructures.py  encoders.py  exception_handlers.py  exceptions.py  logger.py  param_functions.py  params.py  requests.py  responses.py  routing.py  staticfiles.py  templating.py  testclient.py  types.py  utils.py  (+1 more)
astraapi/_compat/: shared.py  v2.py
astraapi/dependencies/: models.py  utils.py
astraapi/middleware/: __init__.py  asyncexitstack.py  cors.py  gzip.py  httpsredirect.py  trustedhost.py  wsgi.py
astraapi/openapi/: docs.py  models.py  utils.py
astraapi/security/: api_key.py  base.py  http.py  oauth2.py  open_id_connect_url.py  utils.py
ben_test/: ws_bench.py
ben_test/bun_Test/: index.ts  package.json  ws.ts
ben_test/rust_test/: Cargo.toml
benchmarks/: go.mod  go.sum  main.go  test_app_cpp.py  test_app_python.py
benchmarks/benchmarks/: results.json  ws_results.json
benchmarks/normal/: main.py
buntest/: README.md  index.ts  package.json
cpp_core/: CMakeLists.txt  build_pgo.sh
cpp_core/include/: app.hpp  asgi_constants.hpp  buffer_pool.hpp  compat.hpp  http_parser.hpp  json_parser.hpp  json_writer.hpp  percent_decode.hpp  platform.hpp  pyref.hpp  router.hpp  streaming_multipart.hpp  ws_frame_parser.hpp  ws_ring_buffer.hpp
cpp_core/src/: app.cpp  asgi_constants.cpp  body_parser.cpp  buffer_pool.cpp  dep_engine.cpp  dependency_resolver.cpp  error_response.cpp  form_parser.cpp  http_parser.cpp  json_encoder.cpp  json_parser.cpp  json_writer.cpp  middleware_engine.cpp  module.cpp  openapi_gen.cpp  param_extractor.cpp  request_parser.cpp  request_pipeline.cpp  response_builder.cpp  response_pipeline.cpp  router.cpp  security.cpp  streaming_multipart.cpp  utils.cpp  websocket_handler.cpp  ws_frame_parser.cpp  ws_ring_buffer.cpp
cpp_test/: .env.example  auth.py  database.py  main.py  middleware.py  models.py
cpp_test/routes/: auth.py  files.py  posts.py  users.py
docs/.vitepress/: config.mts
docs/architecture/: index.md  zero-copy.md
docs/deployment/: docker.md
docs/examples/: crud-api.md  hello-world.md  realtime-chat.md
docs/features/: file-uploads.md  form-data.md  path-params.md  query-params.md  request-body.md  responses.md  security.md  streaming.md  validation.md  websockets.md
docs/guide/: create-app.md  installation.md  run-server.md
docs_src/additional_responses/: tutorial001_py39.py  tutorial002_py310.py  tutorial002_py39.py  tutorial003_py39.py  tutorial004_py310.py  tutorial004_py39.py
docs_src/additional_status_codes/: tutorial001_an_py310.py  tutorial001_an_py39.py  tutorial001_py310.py  tutorial001_py39.py
docs_src/advanced_middleware/: tutorial001_py39.py  tutorial002_py39.py  tutorial003_py39.py
docs_src/app_testing/: tutorial001_py39.py  tutorial002_py39.py  tutorial003_py39.py  tutorial004_py39.py
docs_src/authentication_error_status_code/: tutorial001_an_py39.py
docs_src/background_tasks/: tutorial001_py39.py  tutorial002_an_py310.py  tutorial002_an_py39.py  tutorial002_py310.py  tutorial002_py39.py
docs_src/behind_a_proxy/: tutorial001_01_py39.py  (+4 more)
docs_web/: index.md
fastapi/: __init__.py  _app_base.py  _background.py  _concurrency.py  _core_app.py  _core_bridge.py  _cpp_server.py  _datastructures_impl.py  _exception_handler.py  _middleware_impl.py  _multiworker.py  _reloader.py  _request.py  _response.py  _routing_base.py  _staticfiles.py  _templating.py  _testclient.py  _types.py  _websocket.py  _ws_groups.py  applications.py  background.py  concurrency.py  datastructures.py  encoders.py  exception_handlers.py  exceptions.py  params.py  requests.py  responses.py  routing.py  staticfiles.py  templating.py  testclient.py  utils.py  websockets.py
scripts/: build_core.sh
tests/: conftest.py  main.py  test_additional_properties.py  test_additional_properties_bool.py  test_additional_response_extra.py  test_additional_responses_bad.py  test_additional_responses_custom_model_in_callback.py  test_additional_responses_custom_validationerror.py  test_additional_responses_default_validationerror.py  test_additional_responses_response_class.py  test_additional_responses_router.py  test_additional_responses_union_duplicate_anyof.py  test_allow_inf_nan_in_enforcing.py  test_ambiguous_params.py  test_annotated.py  test_application.py  test_arbitrary_types.py  test_callable_endpoint.py  test_compat.py  test_computed_fields.py  test_custom_middleware_exception.py  test_custom_route_class.py  test_custom_schema_fields.py  test_custom_swagger_ui_redirect.py  test_datastructures.py  test_datetime_custom_encoder.py  test_default_response_class.py  test_default_response_class_router.py  test_dependency_after_yield_raise.py  test_dependency_after_yield_streaming.py  test_dependency_after_yield_websockets.py  test_dependency_cache.py  test_dependency_class.py  test_dependency_contextmanager.py  test_dependency_contextvars.py  test_dependency_duplicates.py  test_dependency_overrides.py  test_dependency_paramless.py  test_dependency_partial.py  test_dependency_pep695.py  (+150 more)
un_t/: README.md  index.ts  package.json
(+781 files in other folders)
